--- a/public/styles.css
+++ b/public/styles.css
@@ -86,10 +86,7 @@ button {
 }
 .btn-danger {
   background-color: #ec5840;
-  margin-right: 8px;
-  position: relative;
-  /* top: 5px; */
-  /* left: 5px; */
+  padding: 8px;
 }
 
 input[type="checkbox"] {
